@@ -1,3 +1,7 @@
+2006-02-24 Kimmo
+ PATCH: [ 1437758 ] Improve diff selection when selected diff not visible
+  Src: MergeEditView.cpp MergeEditView.h
+
 2006-02-24 Tim
  PATCH: [ 1437677 ] Various Updates in German Translation for WinMerge 2.5
   Src/Languages/German: MergeGerman.rc
